conclusion on models' performances

--- a/TimeSeries_CNN.ipynb
+++ b/TimeSeries_CNN.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -321,15 +321,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.7995 - loss: 0.4313 - val_accuracy: 0.9291 - val_loss: 0.1406\n",
+      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.7911 - loss: 0.4373 - val_accuracy: 0.9174 - val_loss: 0.1541\n",
       "Epoch 2/50\n",
-      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.9223 - loss: 0.1569 - val_accuracy: 0.9383 - val_loss: 0.1234\n",
+      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9212 - loss: 0.1506 - val_accuracy: 0.9355 - val_loss: 0.1496\n",
       "Epoch 3/50\n",
-      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.9399 - loss: 0.1270 - val_accuracy: 0.9452 - val_loss: 0.1139\n",
+      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9306 - loss: 0.1387 - val_accuracy: 0.9314 - val_loss: 0.1396\n",
       "Epoch 4/50\n",
-      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9489 - loss: 0.1162 - val_accuracy: 0.9582 - val_loss: 0.1164\n",
+      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9408 - loss: 0.1244 - val_accuracy: 0.9351 - val_loss: 0.1231\n",
       "Epoch 5/50\n",
-      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9556 - loss: 0.1023 - val_accuracy: 0.9662 - val_loss: 0.0942\n"
+      "\u001b[1m674/674\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.9496 - loss: 0.1156 - val_accuracy: 0.9565 - val_loss: 0.1053\n"
      ]
     }
    ],
@@ -348,17 +348,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m168/168\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 692us/step - accuracy: 0.9286 - loss: 0.1428\n",
-      "Loss: 0.14058855175971985\n",
-      "Accuracy: 0.9291176795959473\n",
-      "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step \n"
+      "\u001b[1m168/168\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 781us/step - accuracy: 0.9202 - loss: 0.1529\n",
+      "Loss: 0.15410973131656647\n",
+      "Accuracy: 0.9173661470413208\n",
+      "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n"
      ]
     }
    ],
@@ -379,22 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.928,\n",
-       " 0.9287887639756025,\n",
-       " 0.928,\n",
-       " 0.9279744277498694,\n",
-       " array([[ 45,   0,  25],\n",
-       "        [  0, 586,   1],\n",
-       "        [ 30,  16, 297]]))"
+       "(0.902,\n",
+       " 0.9435544739998143,\n",
+       " 0.902,\n",
+       " 0.9085883016543623,\n",
+       " array([[ 70,   0,   0],\n",
+       "        [  0, 585,   2],\n",
+       "        [ 79,  17, 247]]))"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,19 +794,18 @@
     "The kernel size was chosen odd as it allows to have a central value which is preferred in most cases. [3]\n",
     "\n",
     "\n",
-    "The model #3 has only one convolutional layer and no pooling layer. This model is simpler and faster to train and it performs quite well on the random test set. Instead of using the MaxPooling1D layer, I have set the strides parameter to two and the padding to same in the model #3.  [4], [5] This allows to reduce the spatial dimension by half (but not changing the output size because we have added the padding) at the same time as feature extraction and to keep the important information for the classification.\n",
+    "The model #3 has only one convolutional layer and no pooling layer. This model is simpler and faster to train and it performs quite well on the random test set. Instead of using the MaxPooling1D layer, I have set the strides parameter to two and the padding to 'same'.  [4], [5] This allows to reduce the spatial dimension by half (but not changing the output size because we have added the padding) at the same time as feature extraction and to keep the important information for the classification.\n",
     "\n",
-    "I have also tried to train a model similar to the model #3 but adding MaxPooling1D layer after the convolutional layer. The model performed worse than the model #3 on several random test datasets. This may be due to the fact that the 1D data we have is already quite simple and the pooling layer may have removed some important information for the classification. \n",
+    "I have also tried to train a model similar to the model #3 but adding MaxPooling1D layer after the convolutional layer (strides=1). The model performed lightly worse than the model #3 on several random test datasets. This may be due to the fact that the 1D data we have is already quite simple and the pooling layer may have removed some important information for the classification. But in general, both architectures perform similarly on the random test datasets.\n",
     "\n",
+    "In conclusion, the model #1 is more complex and computationally expensive but it allows to learn more complex features. The model #3 is simpler and faster to train. In the case of our time series data, it seems that model #1 is better, especially for classifying the class '0'. \n",
     "\n",
     "Sources:\n",
     "- [1] https://stats.stackexchange.com/questions/343168/keras-functional-model-for-cnn-why-2-conv-layers\n",
     "- [2] Simonyan, K., & Zisserman, A. (2014). Very deep convolutional networks for large-scale image recognition. arXiv preprint arXiv:1409.1556.\n",
     "- [3] https://medium.com/analytics-vidhya/how-to-choose-the-size-of-the-convolution-filter-or-kernel-size-for-cnn-86a55a1e2d15\n",
     "- [4] https://stats.stackexchange.com/questions/288261/why-is-max-pooling-necessary-in-convolutional-neural-networks\n",
-    "- [5] Springenberg, J. T., Dosovitskiy, A., Brox, T., & Riedmiller, M. (2014). Striving for simplicity: The all convolutional net. arXiv preprint arXiv:1412.6806.\n",
-    "\n",
-    " "
+    "- [5] Springenberg, J. T., Dosovitskiy, A., Brox, T., & Riedmiller, M. (2014). Striving for simplicity: The all convolutional net. arXiv preprint arXiv:1412.6806."
    ]
   }
  ],
